--- a/spring-hello-chart/templates/service.yaml
+++ b/spring-hello-chart/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "spring-hello-chart.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
-    {{- include "spring-hello-chart.labels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.nodePort }}
   selector:
-    {{- include "spring-hello-chart.selectorLabels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
