--- a/spring-hello-chart/templates/tests/test-connection.yaml
+++ b/spring-hello-chart/templates/tests/test-connection.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.test.enabled }}
+
 apiVersion: v1
 kind: Pod
 metadata:
@@ -13,3 +15,5 @@ spec:
       command: ['wget']
       args: ['{{ include "spring-hello-chart.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
+
+{{- end }}
