--- a/argo-apps/spring-hello-app-qa.yaml
+++ b/argo-apps/spring-hello-app-qa.yaml
@@ -1,26 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: spring-hello
+  name: spring-hello-argocd-project
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: 'https://github.com/ssmcse03/spring-hello-argo.git'
     targetRevision: main
-    # path: k8s  //When we use without helm chart and use deployment.yaml, service.yaml files directly
     path: helm-chart
-
-    ##ComparisonError Failed to load target state: failed to generate manifest for source 1 of 1: rpc error: code = Unknown desc = error loading repo index: failed to get index: 404 Not Found
-    ## Try Solution 1- If you are using a Git repository to store your Helm chart, you should remove the chart field and use the path field to specify the location of the chart in the repository.
-    # chart: spring-hello-chart
-    # helm:
-    #   valueFiles:
-    #     - values.yaml
-    
+    helm:
+      valueFiles:
+        - values-qa-override.yaml
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: default
+    namespace: np-dev
   syncPolicy:
     automated:
       prune: true
