Update argocd application project name from default to project: spring-hello-proj | added AppProject

--- a/argo-apps/spring-hello-app.yaml
+++ b/argo-apps/spring-hello-app.yaml
@@ -1,10 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: spring-hello-argocd-project
+  name: spring-hello-argocd-application
   namespace: argocd
 spec:
-  project: default
+  project: spring-hello-proj
   source:
     repoURL: 'https://github.com/ssmcse03/spring-hello-argo.git'
     targetRevision: main
